--- a/style.css
+++ b/style.css
@@ -12,4 +12,58 @@ body {
     align-items: center;
 }
 
-.calculator
+.calculator {
+    width: 300px;
+    height: 500px;
+    box-shadow: 4px 4px 30px;
+    border-radius: 12px;
+    background: #2e2050;
+    overflow: hidden;
+}
+
+form input {
+    width: 100%;
+    height: 300%;
+    border: none;
+    border-radius: 16px;
+    font-size: 2rem;
+    padding: 1rem;
+    color: blueviolet;
+    background: #643b9f;
+    text-align: right;
+}
+
+.buttons {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 20px;
+}
+
+button {
+    flex: 0 0  22%;
+    margin: 5px 0;
+    border: 1px solid #000;
+    width: 60px;
+    height: 52px;
+    font-size: 22px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.btn-purple {
+    background-color: #8766ae;
+    color: #fff;
+}
+
+.btn-grey {
+    background-color: #412279;
+}
+
+.btn-equal {
+    background-color: #b53da1;
+}
+
+.btn-clear {
+    background-color: #ed6ab8;
+}
